[project]
name = "webmentions"
version = "0.1.4"
description = "A general-purpose library to add Webmentions support to your website"
license = "AGPL-3.0-or-later"
dependencies = [
	"requests",
    "beautifulsoup4",
    "mf2py",
]
authors = [
  {name = "Fabio Manganiello", email = "fabio@manganiello.tech"},
]

classifiers=[
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
]

readme = "README.md"
requires-python = '>= 3.8'
keywords = ["webmentions", "microformats", "indieweb", "federation"]

[project.optional-dependencies]
db = ["sqlalchemy"]
fastapi = ["fastapi", "uvicorn", "python-multipart"]
file = ["watchdog"]
flask = ["flask"]
docs = ["sphinx>=7", "sphinx-rtd-theme>=2", "myst-parser>=2"]
test = ["pytest", "pytest-cov", "sqlalchemy", "fastapi", "uvicorn", "python-multipart", "watchdog", "flask"]
dev = ["pre-commit", "black", "flake8"]

[project.urls]
homepage = "https://git.fabiomanganiello.com/webmentions"
github = "https://github.com/blacklight/webmentions"
docs = "https://docs.webmentions.work"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src/python"}

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["webmentions*"]

[tool.bumpversion]
current_version = "0.1.4"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "src/python/webmentions/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests",
]
# Silence warning from a legacy usage of codecs.open in mf2py
filterwarnings = [
    "ignore:codecs\\.open\\(\\) is deprecated\\. Use open\\(\\) instead\\.:DeprecationWarning:mf2py\\.backcompat",
]
